nipype (0.9.2+git573-g1fa941e-1) unstable; urgency=medium

  * New upstream snapshot from 0.9.2-573-g1fa941e
    - provides non-minified javascript library (Closes: #737443)
  * debian/rules
    - enable doctests
  * debian/control
    - boost policy to 3.9.6

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 08 Oct 2014 11:13:14 -0400

nipype (0.9.2-1) unstable; urgency=low

  * New bugfix upstream release

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 31 Jan 2014 15:47:16 -0500

nipype (0.9.1+git9-g8b1d21c-1) unstable; urgency=low

  * Post bug-fix release snapshot
    - should fix DataFinder bug (gh-761) introduced in 0.9 (Closes: #734591)

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 08 Jan 2014 09:47:21 -0500

nipype (0.9-1) unstable; urgency=low

  * New upstream release
  * debian/control
    - boosted policy to 3.9.4

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 20 Dec 2013 21:48:17 -0500

nipype (0.8-1) unstable; urgency=low

  * New upstream release
    - dropping picked up previously changesets

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 13 May 2013 14:47:28 -0400

nipype (0.7-1) experimental; urgency=low

  * New upstream release
  * debian/patches:
    - included post release fix
      changeset_fa7ef717b40cf175f0b6d09a3d2180cc9ddfb1e8.diff
    - dropped previous picked up patches
  * debian/watch:
    - adjusted for everchanging layout at github

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 10 Jan 2013 11:35:28 -0500

nipype (0.6.0-2) experimental; urgency=low

  * Cherry-picked cc5433b3513477a3ccf6addac4b67fb4e2884d48 as
    0001-fix-github-authentication.patch to resolve FTBFS while building
    documentation

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 23 Oct 2012 11:29:33 -0400

nipype (0.6.0-1) experimental; urgency=low

  * New upstream release.  Upload to experimental due to wheezy freeze
  * Boosted policy to 3.9.3
  * debian/watch: adjusted for github url changes
