@@ -10,7 +10,7 @@ Build-Depends: cdbs, debhelper (>= 7), python-support (>= 0.6), python (>= 2.6),
                python-networkx (>= 1.3),
                python-cfflib,
                graphviz,
-               ipython,
+               ipython (>= 1~) | ipython1x,
 Build-Conflicts: python-networkx (<=1.0~rc1~)
 Homepage: http://nipy.sourceforge.net/nipype/
 Vcs-Git: git://git.debian.org/git/pkg-exppsy/nipype.git
