@@ -6,8 +6,10 @@ nipype (0.9.2+git573-g1fa941e-1) unstable; urgency=medium
     - enable doctests
   * debian/control
     - boost policy to 3.9.6
+    - build-depends on recent ipython (or use ipython1x) to obtain necessary
+      sphinx extensions
 
- -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 08 Oct 2014 11:13:14 -0400
+ -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 08 Oct 2014 23:08:54 -0400
 
 nipype (0.9.2-1) unstable; urgency=low
 
